# whispersubs

./: .gitignore  .pre-commit-config.yaml  README.md  faster_whisper_subtitles.py  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yml
whispersubs/: __main__.py
